--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "d3-selection": "^3.0.0",
     "d3-zoom": "^3.0.0",
     "framer-motion": "12.28.1",
+    "heic2any": "^0.0.4",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-router-dom": "7.12.0",
